Improved event handling on mousedown and fixed map flags on safari and IE

--- a/css/fw1.css
+++ b/css/fw1.css
@@ -263,6 +263,7 @@ a:hover{
 	height: 28%;
 	z-index: 9999;
 	border-radius: 5% 5% 0 0;
+	border-top: 2px ridge rgba(176,240,255,1);
 }
 #diplomacy-ui{
 	font-family: "Times New Roman", serif;
@@ -280,60 +281,60 @@ a:hover{
 .stagBlue{
 	background: rgba(0, 16, 60, .8);
 	background: linear-gradient(top, 
-		rgba(0, 24, 100, .8) 0%, rgba(0, 24, 100, .8) 10%, 
-		rgba(0, 22, 90, .8) 10%, rgba(0, 22, 90, .8) 20%, 
-		rgba(0, 20, 80, .8) 20%, rgba(0, 20, 80, .8) 30%, 
-		rgba(0, 18, 70, .8) 30%, rgba(0, 18, 70, .8) 40%, 
-		rgba(0, 16, 60, .8) 40%, rgba(0, 16, 60, .8) 50%, 
-		rgba(0, 14, 50, .8) 50%, rgba(0, 14, 50, .8) 60%, 
-		rgba(0, 12, 40, .8) 60%, rgba(0, 12, 40, .8) 70%, 
-		rgba(0, 10, 30, .8) 70%, rgba(0, 10, 30, .8) 80%, 
-		rgba(0, 8, 20, .8) 80%, rgba(0, 8, 20, .8) 90%, 
-		rgba(0, 6, 10, .8) 90%, rgba(0, 6, 10, .8) 100%);
+		rgba(0, 24, 100, .82) 0%, rgba(0, 24, 100, .84) 10%, 
+		rgba(0, 22, 90, .84) 10%, rgba(0, 22, 90, .86) 20%, 
+		rgba(0, 20, 80, .86) 20%, rgba(0, 20, 80, .88) 30%, 
+		rgba(0, 18, 70, .88) 30%, rgba(0, 18, 70, .9) 40%, 
+		rgba(0, 16, 60, .9) 40%, rgba(0, 16, 60, .92) 50%, 
+		rgba(0, 14, 50, .92) 50%, rgba(0, 14, 50, .94) 60%, 
+		rgba(0, 12, 40, .94) 60%, rgba(0, 12, 40, .96) 70%, 
+		rgba(0, 10, 30, .96) 70%, rgba(0, 10, 30, .98) 80%, 
+		rgba(0, 8, 20, .98) 80%, rgba(0, 8, 20, 1) 90%, 
+		rgba(0, 6, 10, 1) 90%, rgba(0, 6, 10, 1) 100%);
 	background: -webkit-linear-gradient(top, 
-		rgba(0, 24, 100, .8) 0%, rgba(0, 24, 100, .8) 10%, 
-		rgba(0, 22, 90, .8) 10%, rgba(0, 22, 90, .8) 20%, 
-		rgba(0, 20, 80, .8) 20%, rgba(0, 20, 80, .8) 30%, 
-		rgba(0, 18, 70, .8) 30%, rgba(0, 18, 70, .8) 40%, 
-		rgba(0, 16, 60, .8) 40%, rgba(0, 16, 60, .8) 50%, 
-		rgba(0, 14, 50, .8) 50%, rgba(0, 14, 50, .8) 60%, 
-		rgba(0, 12, 40, .8) 60%, rgba(0, 12, 40, .8) 70%, 
-		rgba(0, 10, 30, .8) 70%, rgba(0, 10, 30, .8) 80%, 
-		rgba(0, 8, 20, .8) 80%, rgba(0, 8, 20, .8) 90%, 
-		rgba(0, 6, 10, .8) 90%, rgba(0, 6, 10, .8) 100%);
+		rgba(0, 24, 100, .82) 0%, rgba(0, 24, 100, .84) 10%, 
+		rgba(0, 22, 90, .84) 10%, rgba(0, 22, 90, .86) 20%, 
+		rgba(0, 20, 80, .86) 20%, rgba(0, 20, 80, .88) 30%, 
+		rgba(0, 18, 70, .88) 30%, rgba(0, 18, 70, .9) 40%, 
+		rgba(0, 16, 60, .9) 40%, rgba(0, 16, 60, .92) 50%, 
+		rgba(0, 14, 50, .92) 50%, rgba(0, 14, 50, .94) 60%, 
+		rgba(0, 12, 40, .94) 60%, rgba(0, 12, 40, .96) 70%, 
+		rgba(0, 10, 30, .96) 70%, rgba(0, 10, 30, .98) 80%, 
+		rgba(0, 8, 20, .98) 80%, rgba(0, 8, 20, 1) 90%, 
+		rgba(0, 6, 10, 1) 90%, rgba(0, 6, 10, 1) 100%);
 	background: -moz-linear-gradient(top, 
-		rgba(0, 24, 100, .8) 0%, rgba(0, 24, 100, .8) 10%, 
-		rgba(0, 22, 90, .8) 10%, rgba(0, 22, 90, .8) 20%, 
-		rgba(0, 20, 80, .8) 20%, rgba(0, 20, 80, .8) 30%, 
-		rgba(0, 18, 70, .8) 30%, rgba(0, 18, 70, .8) 40%, 
-		rgba(0, 16, 60, .8) 40%, rgba(0, 16, 60, .8) 50%, 
-		rgba(0, 14, 50, .8) 50%, rgba(0, 14, 50, .8) 60%, 
-		rgba(0, 12, 40, .8) 60%, rgba(0, 12, 40, .8) 70%, 
-		rgba(0, 10, 30, .8) 70%, rgba(0, 10, 30, .8) 80%, 
-		rgba(0, 8, 20, .8) 80%, rgba(0, 8, 20, .8) 90%, 
-		rgba(0, 6, 10, .8) 90%, rgba(0, 6, 10, .8) 100%);
+		rgba(0, 24, 100, .82) 0%, rgba(0, 24, 100, .84) 10%, 
+		rgba(0, 22, 90, .84) 10%, rgba(0, 22, 90, .86) 20%, 
+		rgba(0, 20, 80, .86) 20%, rgba(0, 20, 80, .88) 30%, 
+		rgba(0, 18, 70, .88) 30%, rgba(0, 18, 70, .9) 40%, 
+		rgba(0, 16, 60, .9) 40%, rgba(0, 16, 60, .92) 50%, 
+		rgba(0, 14, 50, .92) 50%, rgba(0, 14, 50, .94) 60%, 
+		rgba(0, 12, 40, .94) 60%, rgba(0, 12, 40, .96) 70%, 
+		rgba(0, 10, 30, .96) 70%, rgba(0, 10, 30, .98) 80%, 
+		rgba(0, 8, 20, .98) 80%, rgba(0, 8, 20, 1) 90%, 
+		rgba(0, 6, 10, 1) 90%, rgba(0, 6, 10, 1) 100%);
 	background: -ms-linear-gradient(top, 
-		rgba(0, 24, 100, .8) 0%, rgba(0, 24, 100, .8) 10%, 
-		rgba(0, 22, 90, .8) 10%, rgba(0, 22, 90, .8) 20%, 
-		rgba(0, 20, 80, .8) 20%, rgba(0, 20, 80, .8) 30%, 
-		rgba(0, 18, 70, .8) 30%, rgba(0, 18, 70, .8) 40%, 
-		rgba(0, 16, 60, .8) 40%, rgba(0, 16, 60, .8) 50%, 
-		rgba(0, 14, 50, .8) 50%, rgba(0, 14, 50, .8) 60%, 
-		rgba(0, 12, 40, .8) 60%, rgba(0, 12, 40, .8) 70%, 
-		rgba(0, 10, 30, .8) 70%, rgba(0, 10, 30, .8) 80%, 
-		rgba(0, 8, 20, .8) 80%, rgba(0, 8, 20, .8) 90%, 
-		rgba(0, 6, 10, .8) 90%, rgba(0, 6, 10, .8) 100%);
+		rgba(0, 24, 100, .82) 0%, rgba(0, 24, 100, .84) 10%, 
+		rgba(0, 22, 90, .84) 10%, rgba(0, 22, 90, .86) 20%, 
+		rgba(0, 20, 80, .86) 20%, rgba(0, 20, 80, .88) 30%, 
+		rgba(0, 18, 70, .88) 30%, rgba(0, 18, 70, .9) 40%, 
+		rgba(0, 16, 60, .9) 40%, rgba(0, 16, 60, .92) 50%, 
+		rgba(0, 14, 50, .92) 50%, rgba(0, 14, 50, .94) 60%, 
+		rgba(0, 12, 40, .94) 60%, rgba(0, 12, 40, .96) 70%, 
+		rgba(0, 10, 30, .96) 70%, rgba(0, 10, 30, .98) 80%, 
+		rgba(0, 8, 20, .98) 80%, rgba(0, 8, 20, 1) 90%, 
+		rgba(0, 6, 10, 1) 90%, rgba(0, 6, 10, 1) 100%);
 	background: -o-linear-gradient(top, 
-		rgba(0, 24, 100, .8) 0%, rgba(0, 24, 100, .8) 10%, 
-		rgba(0, 22, 90, .8) 10%, rgba(0, 22, 90, .8) 20%, 
-		rgba(0, 20, 80, .8) 20%, rgba(0, 20, 80, .8) 30%, 
-		rgba(0, 18, 70, .8) 30%, rgba(0, 18, 70, .8) 40%, 
-		rgba(0, 16, 60, .8) 40%, rgba(0, 16, 60, .8) 50%, 
-		rgba(0, 14, 50, .8) 50%, rgba(0, 14, 50, .8) 60%, 
-		rgba(0, 12, 40, .8) 60%, rgba(0, 12, 40, .8) 70%, 
-		rgba(0, 10, 30, .8) 70%, rgba(0, 10, 30, .8) 80%, 
-		rgba(0, 8, 20, .8) 80%, rgba(0, 8, 20, .8) 90%, 
-		rgba(0, 6, 10, .8) 90%, rgba(0, 6, 10, .8) 100%);
+		rgba(0, 24, 100, .82) 0%, rgba(0, 24, 100, .84) 10%, 
+		rgba(0, 22, 90, .84) 10%, rgba(0, 22, 90, .86) 20%, 
+		rgba(0, 20, 80, .86) 20%, rgba(0, 20, 80, .88) 30%, 
+		rgba(0, 18, 70, .88) 30%, rgba(0, 18, 70, .9) 40%, 
+		rgba(0, 16, 60, .9) 40%, rgba(0, 16, 60, .92) 50%, 
+		rgba(0, 14, 50, .92) 50%, rgba(0, 14, 50, .94) 60%, 
+		rgba(0, 12, 40, .94) 60%, rgba(0, 12, 40, .96) 70%, 
+		rgba(0, 10, 30, .96) 70%, rgba(0, 10, 30, .98) 80%, 
+		rgba(0, 8, 20, .98) 80%, rgba(0, 8, 20, 1) 90%, 
+		rgba(0, 6, 10, 1) 90%, rgba(0, 6, 10, 1) 100%);
 }
 .diplomacyPlayers{
 	position: relative;
@@ -385,9 +386,6 @@ a:hover{
 	z-index: 9999;
 	color: #fff;
 	text-align: right;
-}
-.ui-window{
-	border-top: 2px groove rgba(176,240,255,1);
 }
 #resources-ui > .row, #target-ui > .row{
 	margin: 0;
@@ -555,7 +553,6 @@ table td, .table th, .table td {
 	top: 0%;
 	left: 0%;
 	width: 197.461%;
-	height: 2022px;
 }
 #worldWrap{
 	position: absolute;
